add real retreat data to the events page

--- a/locales/en/events.json
+++ b/locales/en/events.json
@@ -27,16 +27,15 @@
       "whatToBring": "Comfortable clothing, yoga mat, water bottle, journal"
     },
     "event2": {
-      "title": "Mountain Escape Weekend",
+      "title": "Yoga & Nature Immersion",
       "category": "Retreat",
-      "date": "April 20-22, 2025",
-      "time": "Friday 5:00 PM - Sunday 4:00 PM",
-      "location": "Valle de Bravo",
-      "shortDescription": "Three-day retreat combining yoga, meditation, and nature immersion",
-      "fullDescription": "Escape the city and reconnect with yourself in the stunning mountains of Valle de Bravo. This weekend retreat includes daily yoga sessions, guided meditations, hiking, wholesome vegetarian meals, and plenty of time for rest and reflection. Accommodation in a beautiful eco-lodge with mountain views included.",
+      "date": "November 13-17, 2025",
+      "time": "",
+      "location": "Salento, Quindío, Colombia",
+      "shortDescription": "A four-day retreat that combines yoga, spiritual philosophy, and connection to nature.",
+      "fullDescription": "This general-purpose retreat is meant to help you rejuvenate and regain harmony through Vinyasa and Kundalini Yoga. Our space in Salento is truly special; we will have several hikes to mountaintops, lakes and waterfalls. We will also cover the theoretical principles behind yoga and spirituality, touch mayan calendar knowledge, and connect through sharing circles and other activities. Food & accommodation are included, but transportation to the retreat place is at your own cost. For those who want to see a bit of Colombia, it is possible to extend the retreat by 1 day for a trip to Valle de Cócora for 1,000 MXN more.",
       "instructor": "Harjeet & Camila",
-      "price": "$8,500 MXN (all-inclusive)",
-      "whatToBring": "Comfortable clothing for yoga and hiking, personal toiletries, journal, reusable water bottle"
+      "price": "$8,000 MXN"
     },
     "event3": {
       "title": "50-Hour Aerial Yoga Teacher Training",
