add photo workshop and update spanish translations for the events page

--- a/locales/en/events.json
+++ b/locales/en/events.json
@@ -15,22 +15,21 @@
   },
   "events": {
     "event1": {
-      "title": "Breathwork Fundamentals",
+      "title": "Aerial Yoga Photo | Day of the Dead",
       "category": "Workshop",
-      "date": "March 15, 2025",
-      "time": "10:00 AM - 1:00 PM",
-      "location": "Roma Studio",
-      "shortDescription": "Learn ancient breathing techniques to calm the mind and energize the body",
-      "fullDescription": "Discover the transformative power of conscious breathing in this comprehensive workshop. You'll learn pranayama techniques from various yoga traditions, understand the science behind breathwork, and experience guided practices that reduce stress, increase energy, and promote deep relaxation. Suitable for all levels.",
-      "instructor": "Harjeet",
-      "price": "$800 MXN",
-      "whatToBring": "Comfortable clothing, yoga mat, water bottle, journal"
+      "date": "November 1, 2025",
+      "time": "10:00 - 11:00 AM",
+      "location": "Aguacate Studio",
+      "shortDescription": "Practice yoga in the air while a professional photographer captures the moment.",
+      "fullDescription": "In this special day-of-the-dead yoga session you will have the opportunity to have professional photos taken while you practice yoga in the air, suspended in silk hammocks. Other than that, it will be a class as usual.",
+      "instructor": "Dani & Itzel",
+      "price": "$400 MXN"
     },
     "event2": {
       "title": "Yoga & Nature Immersion",
       "category": "Retreat",
-      "date": "November 13-17, 2025",
-      "time": "",
+      "date": "November 14-17, 2025",
+      "time": "4 Full Days",
       "location": "Salento, Quindío, Colombia",
       "shortDescription": "A four-day retreat that combines yoga, spiritual philosophy, and connection to nature.",
       "fullDescription": "This general-purpose retreat is meant to help you rejuvenate and regain harmony through Vinyasa and Kundalini Yoga. Our space in Salento is truly special; we will have several hikes to mountaintops, lakes and waterfalls. We will also cover the theoretical principles behind yoga and spirituality, touch mayan calendar knowledge, and connect through sharing circles and other activities. Food & accommodation are included, but transportation to the retreat place is at your own cost. For those who want to see a bit of Colombia, it is possible to extend the retreat by 1 day for a trip to Valle de Cócora for 1,000 MXN more.",
