improve the event system to support sorting and past events

--- a/locales/en/events.json
+++ b/locales/en/events.json
@@ -11,6 +11,10 @@
       "workshop": "Workshops",
       "retreat": "Retreats",
       "training": "Teacher Trainings"
+    },
+    "timeToggle": {
+      "showPast": "Show Past Events",
+      "showUpcoming": "Show Upcoming Events"
     }
   },
   "events": {
