--- a/locales/es/events.json
+++ b/locales/es/events.json
@@ -11,6 +11,10 @@
       "workshop": "Talleres",
       "retreat": "Retiros",
       "training": "Formación de Maestros"
+    },
+    "timeToggle": {
+      "showPast": "Mostrar Eventos Pasados",
+      "showUpcoming": "Mostrar Próximos Eventos"
     }
   },
   "events": {
