add past teacher training event

--- a/locales/es/events.json
+++ b/locales/es/events.json
@@ -38,7 +38,18 @@
       "shortDescription": "Un retiro de cuatro días que combina yoga, filosofía espiritual y conexión con la naturaleza.",
       "fullDescription": "Este retiro de propósito general está diseñado para ayudarte a rejuvenecer y recuperar la armonía a través del Vinyasa y Kundalini Yoga. Nuestro espacio en Salento es verdaderamente especial; tendremos varias caminatas a cimas de montañas, lagos y cascadas. También cubriremos los principios teóricos detrás del yoga y la espiritualidad, tocaremos el conocimiento del calendario maya y nos conectaremos a través de círculos de compartir y otras actividades. La comida y el alojamiento están incluidos, pero el transporte al lugar del retiro corre por tu cuenta. Para aquellos que quieran conocer un poco de Colombia, es posible extender el retiro por 1 día para un viaje al Valle de Cócora por 1,000 MXN adicionales.",
       "instructor": "Harjeet y Camila",
-      "price": "$8,000 MXN"
+      "price": "$1,800,000 COP ($8,000 MXN)"
+    },
+    "aerial-teacher-training_jun2025": {
+      "title": "Formación de Maestros de Yoga Aéreo 100 Horas",
+      "category": "Formación de Maestros",
+      "date": "21 de junio - 27 de septiembre, 2025",
+      "time": "Fines de semana (Sábados)",
+      "location": "Hari Om, Ciudad de México, México",
+      "shortDescription": "Convértete en maestro de yoga aéreo con nuestro programa de formación especializado.",
+      "fullDescription": "El yoga aéreo está ganando cada vez más popularidad, no solo porque se ve genial, sino también porque hace que posturas más avanzadas sean accesibles para principiantes desde el día 1. Nuestro programa presencial de 100 horas es ideal para maestros de yoga que desean ampliar su repertorio, pero también puedes participar como principiante absoluto. Cubriremos todos los módulos esenciales como alineación, anatomía, filosofía y más. Nuestras sesiones se llevarán a cabo los sábados en Hari Om Studio, Ciudad de México.",
+      "instructor": "Camila y Harjeet",
+      "price": "$23,000 MXN"
     },
     "aerial-teacher-training_nov2025": {
       "title": "Formación de Maestros de Yoga Aéreo 50 Horas",
@@ -49,7 +60,7 @@
       "shortDescription": "Convértete en maestro de yoga aéreo con nuestro programa de formación especializado.",
       "fullDescription": "El yoga aéreo está ganando cada vez más popularidad, no solo porque se ve genial, sino también porque hace que posturas más avanzadas sean accesibles para principiantes desde el día 1. Nuestro programa híbrido de 50 horas es ideal para maestros de yoga que desean ampliar su repertorio, pero también puedes participar como principiante absoluto. Nuestras sesiones se llevarán a cabo los fines de semana en la hermosa Yoguitería en Calarca, Colombia. Aunque diseñada principalmente como una experiencia presencial, esta formación de maestros puede tomarse parcialmente en línea, pero se requieren dos fines de semana presenciales para obtener tu certificación de Yoga Alliance.",
       "instructor": "Camila y Harjeet",
-      "price": "10,000 MXN"
+      "price": "$2,000,000 COP ($10,000 MXN)"
     }
   },
   "eventTypes": {
