--- a/locales/en/events.json
+++ b/locales/en/events.json
@@ -38,7 +38,18 @@
       "shortDescription": "A four-day retreat that combines yoga, spiritual philosophy, and connection to nature.",
       "fullDescription": "This general-purpose retreat is meant to help you rejuvenate and regain harmony through Vinyasa and Kundalini Yoga. Our space in Salento is truly special; we will have several hikes to mountaintops, lakes and waterfalls. We will also cover the theoretical principles behind yoga and spirituality, touch mayan calendar knowledge, and connect through sharing circles and other activities. Food & accommodation are included, but transportation to the retreat place is at your own cost. For those who want to see a bit of Colombia, it is possible to extend the retreat by 1 day for a trip to Valle de Cócora for 1,000 MXN more.",
       "instructor": "Harjeet & Camila",
-      "price": "$8,000 MXN"
+      "price": "$1,800,000 COP ($8,000 MXN)"
+    },
+    "aerial-teacher-training_jun2025": {
+      "title": "100-Hour Aerial Yoga Teacher Training",
+      "category": "Teacher Training",
+      "date": "June 21 - September 27, 2025",
+      "time": "Weekends (Saturdays)",
+      "location": "Hari Om, Mexico City, Mexico",
+      "shortDescription": "Become an aerial yoga teacher with our specialized training program.",
+      "fullDescription": "Aerial yoga is getting increasingly popular, not only because it looks great, but also because it makes more advanced poses accessible to beginners from day 1. Our 100-Hour in-person program is ideal for yoga teachers who want to expand their repertoire, but you can also participate as an absolute beginner. We will cover all the essential modules such as alignment, anatomy, philosophy, and more. Our sessions will take place on Saturdays in Hari Om Studio, Mexico City.",
+      "instructor": "Camila & Harjeet",
+      "price": "$23,000 MXN"
     },
     "aerial-teacher-training_nov2025": {
       "title": "50-Hour Aerial Yoga Teacher Training",
@@ -49,7 +60,7 @@
       "shortDescription": "Become an aerial yoga teacher with our specialized training program.",
       "fullDescription": "Aerial yoga is getting increasingly popular, not only because it looks great, but also because it makes more advanced poses accessible to beginners from day 1. Our 50-Hour hybrid program is ideal for yoga teachers who want to expand their repertoire, but you can also participate as an absolute beginner. Our sessions will take place over the weekends in the beautiful Yoguitería in Calarca, Colombia. Although designed primarily as an in-person experience, this teacher training can be taken partially online - but two in-person weekends are required to obtain your Yoga Alliance certification.",
       "instructor": "Camila & Harjeet",
-      "price": "10,000 MXN"
+      "price": "$2,000,000 COP ($10,000 MXN)"
     }
   },
   "eventTypes": {
