fix missing translation keys in i18n system

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -6,6 +6,12 @@
     "events": "Events",
     "blog": "Blog"
   },
+  "pageTitles": {
+    "home": "SGP Yoga - Yoga Classes in Mexico City | CDMX Studio",
+    "about": "About SGP Yoga - Kundalini, Vinyasa & Aerial Yoga CDMX",
+    "classes": "Yoga Classes Schedule Mexico City | SGP Yoga CDMX",
+    "events": "Yoga Workshops, Retreats & Teacher Training | SGP Yoga CDMX"
+  },
   "buttons": {
     
   },
