--- a/locales/es/classes.json
+++ b/locales/es/classes.json
@@ -34,9 +34,9 @@
   "teachers": {
     "harjeet": "Harjeet",
     "camila": "Camila",
-    "sofia": "Sofia",
-    "carlos": "Carlos",
-    "ana": "Ana"
+    "dani": "Dani",
+    "aro": "Aro",
+    "itzel": "Itzel"
   },
   "locations": {
     "roma": "Estudio Hari Om",
