--- a/locales/es/common.json
+++ b/locales/es/common.json
@@ -6,6 +6,12 @@
     "events": "Eventos",
     "blog": "Blog"
   },
+  "pageTitles": {
+    "home": "SGP Yoga - Clases de Yoga en la Ciudad de México | Estudio CDMX",
+    "about": "Acerca de SGP Yoga - Kundalini, Vinyasa y Yoga Aéreo CDMX",
+    "classes": "Horario de Clases de Yoga Ciudad de México | SGP Yoga CDMX",
+    "events": "Talleres de Yoga, Retiros y Formación de Maestros | SGP Yoga CDMX"
+  },
   "buttons": {
     
   },
